# dji-drone-metadata-embedder

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  HELP.md  HOUSEKEEPING.md  LICENSE  PR_DESCRIPTION.md  README.md  agents.md  create-issues.ps1  create_github_release.ps1  create_release.ps1  create_release.sh  diagnostic_script.py  dji-embed.spec  get-exe-info.ps1  mkdocs.yml  prepare-submission-v1.0.6.ps1  process_drone_footage.bat  process_drone_footage.sh  pyproject.toml  pytest.ini  release_v1.0.5.ps1  release_v1.0.6.ps1  release_v1.0.7.ps1  requirements-build.txt  requirements.txt  run_diagnostic.bat  temp_setup.ps1  test-exe.ps1  update-sha256.ps1  ~$agents.md
.github/: dependabot.yml
.github/winget/: CallMarcus.DJI-Embed.locale.en-US.yaml  CallMarcus.DJI-Embed.yaml  exiftool.yaml  ffmpeg.yaml  installer.yaml  installer.yaml.jinja  python.yaml
.github/winget-manifests/: CallMarcus.DJIMetadataEmbedder.installer.yaml  CallMarcus.DJIMetadataEmbedder.locale.en-US.yaml  CallMarcus.DJIMetadataEmbedder.yaml
.github/workflows/: auto-changelog.yml  certum-sign.yml  ci.yml  docs.yml  publish-winget.yml  release-exe.yml  release-installer.yml  release-pypi.yml  release-winget.yml  release.yml  sign-test.yml  signer-image.yml  windows-bootstrap-smoke-test.yml  winget-manual.yml  winget-submission.yml
dji_metadata_embedder/: __init__.py  dat_parser.py  embedder.py  metadata_check.py  per_frame_embedder.py  telemetry_converter.py  utilities.py
docker/certum-signer/: Dockerfile
docs/: CHANGELOG_AUTOMATION.md  METADATA_CHECKER.md  MODEL_SURVEY.md  MP4_TIMED_METADATA.md  PROGRESS_JSONL.md  RELEASE.md  SRT_FORMATS.md  api.md  ci_baseline.md  decision-table.md  desktop-app.md  development_roadmap.md  external-tool-versions.md  faq.md  fmv-interop.md  geospatial.md  index.md  installation.md  model_survey_brief.md  progress_jsonl.schema.json  recipes.md  requirements-lock-policy.md  troubleshooting.md  user_guide.md  validation_tests.md
docs/how-to/: embed-gps.md  generate-gpx.md  strip-serial-number.md  windows-bundle.md
docs/outreach/: 2026-05-sample-request-posts.md  2026-07-flippilots-sample-request.md
docs/research/: 2026-04-19-chatgpt.md  2026-04-19-deepseek.md  2026-04-19-gemini.md  2026-05-20-chatgpt.md  2026-05-20-gemini.md
examples/: DJI_sample.SRT
gui/: DjiEmbed.Gui.sln
gui/DjiEmbed.Gui/: App.axaml  App.axaml.cs  DjiEmbed.Gui.csproj  Program.cs  ViewLocator.cs  app.manifest
gui/DjiEmbed.Gui.Tests/: A11yNamesTests.cs  CheckSetupViewModelTests.cs  CliDiscoveryViewModelTests.cs  CliLocatorTests.cs  CommandBuilderTests.cs  CommandLineTests.cs  DjiEmbed.Gui.Tests.csproj  DjiEmbedRunnerTests.cs  DoctorReportTests.cs  DropZoneAffordanceTests.cs  EmbedTelemetryOptionsViewModelTests.cs  EmbedTelemetryViewModelTests.cs  ExistingMapFinderTests.cs  FailureDetailsTests.cs  FakeCli.cs  FakeMapServer.cs  FlightMapOptionsViewModelTests.cs  FlowLayoutTests.cs  FlowProgressAndWarningsTests.cs  FolderInspectorTests.cs  FolderPickingTests.cs  GuiStateStoreTests.cs  GuiStateTests.cs  HomeScreenTests.cs  MainWindowStateTests.cs  MakeMapViewModelTests.cs  MapServerTests.cs  NavigationTests.cs  PhotoMapOptionsViewModelTests.cs  ProgressEventTests.cs  RealCliE2ETests.cs  RelativeTimeTests.cs  RevealTests.cs  ScreenshotCaptureTests.cs  TerminalLauncherTests.cs  TestAppBuilder.cs  TileChoiceTests.cs  VerifyOptionsViewModelTests.cs  VerifyReportTests.cs  WebViewSupportTests.cs  (+4 more)
gui/components/: progress_bar.py  status_logger.py
installer/: DjiMetadataEmbedder.iss
samples/: README.md
samples/Avata360/: clip.SRT
samples/Mini5PRO/: clip.SRT
samples/air3/: clip.SRT  (+1 more)
scripts/: create_minimal_mp4.py  decode_samples.py  delete-stale-branches.ps1  delete-stale-branches.sh  generate_changelog.py  test_samples.py  update-unreleased.py  verify_samples.py
src/: dji_metadata_embedder.py  metadata_check.py  telemetry_converter.py
tests/: conftest.py  generate_photo_fixtures.py  generate_test_data.py  test_audio_sidecar.py  test_cli_convert_geo.py  test_cli_convert_output_dir.py  test_cli_doctor.py  test_cli_dragdrop.py  test_cli_flightmap.py  test_cli_logging.py  test_cli_photomap.py  test_cli_serve.py  test_cli_ui_deprecation.py  test_cli_verify_sun.py  test_cli_version.py  test_convert_mp4.py  test_csv_sun.py  test_dat_autoscan.py  test_dat_parser.py  test_embedder_atomic.py  test_footprint_parsing.py  test_format3_parsing.py  test_generate_changelog.py  test_geo_cot.py  test_geo_flightmap.py  test_geo_flightmap3d_html.py  test_geo_flightmap_html.py  test_geo_footprint.py  test_geo_geojson.py  test_geo_geometry.py  test_geo_html.py  test_geo_kml.py  test_geo_photomap.py  test_geo_photomap_html.py  test_geo_serve.py  test_geo_tiles.py  test_geo_track.py  test_golden_fixtures.py  test_gps_nofix.py  test_home_point.py  (+20 more)
tools/: bootstrap.ps1  build_exe.py  build_installer_local.ps1  cleanup_and_restructure.ps1  diagnostic_script.py  prepare-winget-submission.ps1  sync_version.py  test_exe.py
validation_tests/: README.md  run_all_tests.py  run_tests.bat  test_advanced_features.py  test_installation_and_dependencies.py  test_integration.py  test_srt_parsing.py  test_video_processing.py
winget/: CallMarcus.DJIMetadataEmbedder.installer.yaml  CallMarcus.DJIMetadataEmbedder.locale.en-US.yaml  CallMarcus.DJIMetadataEmbedder.yaml  README.md
(+148 files in other folders)
