[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dji-drone-metadata-embedder"
version = "1.0.1"
description = "Embed DJI drone SRT telemetry as metadata in MP4 files"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "DJI Drone Tools"}]
license = "MIT"
dependencies = [
    "ffmpeg-python>=0.2",
    "rich>=13.0",
    "piexif>=1.1"
]

[project.scripts]
dji-embed = "dji_metadata_embedder.embedder:main"

[tool.setuptools.packages.find]
include = ["dji_metadata_embedder", "src*"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py38"
line-length = 88
src = ["dji_metadata_embedder", "tests"]

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
files = ["dji_metadata_embedder"]
ignore_missing_imports = true

