[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dji-drone-metadata-embedder"
authors = [
  {name = "Marcus W.", email = "marcus.westermark@altal.fi"},
]
description = "Python CLI for embedding DJI drone telemetry from SRT logs into MP4 videos"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["dji", "drone", "metadata", "video", "gps", "telemetry", "srt"]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
# Dev tool versions are pinned to match the historical requirements.lock so
# that `uv sync` reproduces CI behaviour exactly. Bump them in a dedicated PR.
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "coverage==7.6.0",
    "black==24.4.2",
    "ruff==0.4.6",
    "mypy==1.8.0",
    "types-click==7.1.8",
]
build = [
    "build==1.2.1",
    "hatchling==1.25.0",
    "twine==5.1.1",
    "pyinstaller>=6.0.0",
    "setuptools>=65.0.0",
    "wheel>=0.38.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/CallMarcus/dji-drone-metadata-embedder"
Issues = "https://github.com/CallMarcus/dji-drone-metadata-embedder/issues"
Repository = "https://github.com/CallMarcus/dji-drone-metadata-embedder.git"

[project.scripts]
dji-embed = "dji_metadata_embedder.cli:main"

[tool.hatch.version]
path = "src/dji_metadata_embedder/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dji_metadata_embedder"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
